# SPA_Project

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
lms/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_owner_fields.py  0003_subscription.py  0004_course_updated_at.py
users/: admin.py  models.py  payment_views.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: seed_groups.py  seed_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_add_stripe_fields.py
